# desktop-sdk

./: .env.cibuildwheel  .gitignore  CMakeLists.txt  README.md  build.sh  dytecat.py  mobile.cc  pyproject.toml  requirements.txt  setup.cfg  setup.py
scripts/: build_curl.sh  copy_prebuilts.sh  setup_prebuilts.sh
src/c++/: dyte_sdk.cc
src/python/dyte_sdk/: __init__.py  prebuilts  transport.py
src/python/examples/chatbot/: bot.py
