[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dyte_sdk"
description = "Dyte Python SDK"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
dyte_sdk = ["prebuilts/*"]

[project.optional-dependencies]
ai-transport = ["pipecat-ai"]
