[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
description = "Dyte Python SDK"
name = "dyte_sdk"
version = "0.0.1"

[project.optional-dependencies]
ai-transport = ["pipecat-ai"]

[tool.cibuildwheel]
before-build = "./scripts/setup_prebuilts.sh"
build = "cp312-manylinux_x86_64"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
repair-wheel-command = ""

[tool.cibuildwheel.macos]
repair-wheel-command = ""

[tool.setuptools.package-data]
dyte_sdk = ["prebuilts/*"]

[tool.setuptools.packages.find]
where = ["src/python"]
